--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			width:100%;
 			float:auto;
 		}
-		@media (min-width:1200px) {
+		@media (min-width:992px) {
 			.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
 				float:left;
 			}
@@ -56,7 +56,7 @@
 
 
 		}
-		@media (min-width:950px) and (max-width:1199px)	{
+		@media (min-width:768px) and (max-width:991px)	{
 			.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 
 			 {
 				float:left;
@@ -99,7 +99,7 @@
 			 }
 
 		}	 
-		@media (max-width:949px) {
+		@media (max-width:767px) {
 			.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12  {
 				float:left;
 			}
@@ -145,7 +145,7 @@
 	</style>
 </head>
 <body>
-	<h1>Our Menue</h1>
+	<h1>Our Menu</h1>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-12"><h2>Checkin</h2><p>we cook very delecious and specila checkin for our customer</p></div>
 		<div class="col-lg-4 col-md-6 col-sm-12"><h2>Fish</h2><p>there is availble vrity of fishes, so our customers are stitisfied very well and therefore we god the best feedback of them</p></div>
